crates/oxc_css_parser/tests/error/tailwindcss/fake-namespace.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `:`, but found `*`
  ┌─ fake-namespace.css:2:12
  │
2 │   --color- *: initial;
  │            ^
